# spotcli

./: CHANGELOG.md  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/workflows/: codeql-analysis.yml  release.yaml
spotcli/: cli.py  configuration.py  elastigroup.py  providers.py  tasks.py
spotcli/configuration/: __init__.py  configuration.py  tasks.py
spotcli/providers/: __init__.py  base.py  consul.py  file.py  s3.py  spot.py
spotcli/utils/: __init__.py  elastigroup.py  filter.py
test/: test_elastigroup.py  test_tasks.py
